syntax = "proto2";
package douyin.idl.user;
option go_package = "user/";

service UserService{
  // 注册
  rpc UserRegister(douyin_user_register_request) returns(douyin_user_register_response);
  // 登录
  rpc UserLogin(douyin_user_login_request) returns(douyin_user_login_response);
  // 通过id获取用户信息
  rpc GetUserInfo(douyin_user_request) returns(douyin_user_response);
  // 更新用户表获赞数
  rpc UpdateTotalFavorite(douyin_total_favorite_request) returns(douyin_total_favorite_response);
  // 更新用户表关注数
  rpc UpdateFollowCount(douyin_follow_count_request) returns(douyin_follow_count_response);
  // 更新用户粉丝数
  rpc UpdateFollowerCount(douyin_follower_count_request) returns(douyin_follower_count_response);

}

message douyin_user_register_request {
  required string username = 1; // 注册用户名，最长32个字符
  required string password = 2; // 密码，最长32个字符
}

message douyin_user_register_response {
  required int32 status_code = 1; // 状态码，0-成功，其他值-失败
  optional string status_msg = 2; // 返回状态描述
  required int64 user_id = 3; // 用户id
  required string token = 4; // 用户鉴权token
}

message douyin_user_login_request {
  required string username = 1; // 登录用户名
  required string password = 2; // 登录密码
}

message douyin_user_login_response {
  required int32 status_code = 1; // 状态码，0-成功，其他值-失败
  optional string status_msg = 2; // 返回状态描述
  required int64 user_id = 3; // 用户id
  required string token = 4; // 用户鉴权token
}

message douyin_user_request {
  required int64 user_id = 1; // 用户id
  required int64 host_user_id = 2; // 被查询用户id
}

message douyin_user_response {
  required int32 status_code = 1; // 状态码，0-成功，其他值-失败
  optional string status_msg = 2; // 返回状态描述
  required User user = 3; // 用户信息
}

message douyin_total_favorite_request{
  required  int64 user_id = 1;
  required  int64  total_favorite =2;
}

message douyin_total_favorite_response {
  required int32 status_code = 1; // 状态码，0-成功，其他值-失败
  optional string status_msg = 2; // 返回状态描述
}

message douyin_follow_count_request{
  required  int64 user_id = 1;
  required  int64  follow_count =2;
}

message douyin_follow_count_response {
  required int32 status_code = 1; // 状态码，0-成功，其他值-失败
  optional string status_msg = 2; // 返回状态描述
}

message douyin_follower_count_request{
  required  int64 user_id = 1;
  required  int64  follower_count =2;
}

message douyin_follower_count_response {
  required int32 status_code = 1; // 状态码，0-成功，其他值-失败
  optional string status_msg = 2; // 返回状态描述
}

message User {
  required int64 id = 1; // 用户id
  required string name = 2; // 用户名称
  optional int64 follow_count = 3; // 关注总数
  optional int64 follower_count = 4; // 粉丝总数
  required bool is_follow = 5; // true-已关注，false-未关注
  optional string avatar = 6; //用户头像
  optional string background_image = 7; //用户个人页顶部大图
  optional string signature = 8; //个人简介
  optional int64 total_favorited = 9; //获赞数量
  optional int64 work_count = 10; //作品数量
  optional int64 favorite_count = 11; //点赞数量
}